# BayesInsight

./: .gitignore  FoottrafficModel.ipynb  README  README.md  all_platform.yml  build_stats  clean_workflow.ipynb  contributions.ipynb  data_processing.ipynb  example_workflow.ipynb  pyproject.toml  requirements.yml  setup.py
archive/: clean_workflow.ipynb  gp_test.ipynb  holiday_confounds.ipynb  test.ipynb  trace.nc.REMOVED.git-id
archive/sample_model/: model.nc
bayesinsight/: __init__.py
bayesinsight/core/: __init__.py  constants.py  model.py
bayesinsight/data/: __init__.py
bayesinsight/lib/: adstock.py  compute_contribution.py  constants.py  transforms.py  utils.py  visualization.py
bayesinsight/models/: dataloading.py  dataset.py  likelihood.py  model.py  priormodel.py  transformsmodel.py  variablemodels.py
bayesinsight/types/: dataloading_types.py  distribution_types.py  likelihood_types.py  transform_types.py  variable_types.py
bayesinsight/variables/: base.py
complex_model/: model.nc  model_def.json
complex_model/data/: metadata.json
experimental/: optimizer.ipynb  optimizer.py  optimizer_final.ipynb  optimizer_setup_exampl.yaml  optimizer_test.ipynb  poisson_process.ipynb  rounded_number.ipynb  test.ipynb  zero_mean_median.ipynb
final_model/: model.nc.REMOVED.git-id
first model aug 2/: model.nc
foottraffic/: __init__.py
foottraffic/awb_model/: __init__.py  _models.py  constants.py  models.py  transforms.py  types.py  utils.py
foottraffic/bayes/: __init__.py
frontend/: main.py
frontend/components/: menu.py
tests/: conftest.py
(+21 files in other folders)
