[project]
name = "bayesinsight"
version = "0.1.0"
description = "Bayesian model for flexible and interpretable insights"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "pandas",
    "numpy",
    "pymc",
    "arviz",
    "xarray",
    "seaborn>=0.13.2",
    "ipykernel>=6.29.5",
    "numpyro>=0.18.0",
    "ipywidgets>=8.1.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]


