[project]
name = "bayesinsight"
version = "0.2.0b"
description = "Bayesian model for flexible and interpretable insights"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic",
    "pandas",
    "numpy",
    "pymc",
    "arviz",
    "xarray",
    "numpyro",
    "jax",
    "patsy",
    "pymc-marketing"
]

[tool.ruff]
target-version = "py311"